--- a/package.json
+++ b/package.json
@@ -40,12 +40,13 @@
     "clsx": "*",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "*",
